[package]
name = "surfrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gribberish = { git = "https://github.com/mpiannucci/gribberish" }
contour = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.22.2"