[package]
name = "surfrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24.0"
csv = "1.1"
quick-xml = {version = "0.22.0", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
num-traits = "0.2.15"
rand = "0.8.5"
itertools = "0.10.3"
sunrise = "1.0.0"
contour = { version = "0.7.0", features = ["geojson"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
